--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,9 +1,9 @@
 ${ courseList
 ? `<header class="mdl-color--${courseList[0].color}">
-    <div class="mdl-cell mdl-card">
+    <div class="h-100 w-100 m-0 mdl-cell mdl-card">
         <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
             <h2 class="display-1" onclick="show('${courseList[0].name}')">${courseList[0].name}</h2>
-            <p class="mdl-card__supporting-text mdl-typography--text-center mdl-color-text--grey-50">
+            <p class="w-100 mdl-card__supporting-text mdl-typography--text-center mdl-color-text--grey-50">
                 ${courseList[0].description}</p>
         </div>
         <div
@@ -20,12 +20,12 @@ ${ courseList
         </div>
     </div>
 </header>
-<section class="mdl-layout__header">
+<section class="p-absolute h-0 h-min-0 mdl-layout__header">
     <div class="mdl-layout__header-row mdl-color--black">
-        <span class="mdl-layout-title"><i class="material-icons">library_books</i>${courseList.length} Formation</span>
+        <span class="mdl-layout-title"><i class="p-absolute material-icons">library_books</i>${courseList.length} Formation</span>
     </div>
 </section>
-<section class="mdl-grid mdl-color--white">
+<section class="mdl-grid mdl-color--accent-contrast">
     ${ courseList.map((course, key) => key
     ? `<div onclick="show('${course.name}')"
         class="mdl-cell mdl-cell--6-col-phone mdl-cell--4-col-tablet mdl-cell--3-col mdl-card mdl-shadow--2dp mdl-color--${course.color}">
@@ -47,10 +47,10 @@ ${ courseList
     </div>`
     : '').join('')}
 </section>
-<footer class="mdl-mega-footer">
-    <div class="mdl-grid">
+<footer class="d-flex mdl-mega-footer">
+    <div class="w-100 mr-0 ml-0 mdl-grid">
         <div class="mdl-cell mdl-cell--3-col-phone mdl-cell--6-col-tablet mdl-cell--8-col mdl-color-text--grey-50">
-            <h4 class="mdl-typography--headline">Seeren Training</h4>
+            <h4 class="mt-0 mdl-typography--headline">Seeren Training</h4>
             <p class="mdl-cell--hide-phone">
                 Motivé par l'idée de fournir des supports de cours à mes apprenants
                 j'ai rédigé l'ensemble en open source sur Github
