--- a/src/index.scss
+++ b/src/index.scss
@@ -3,16 +3,9 @@
 @import "~material-design-icons/iconfont/material-icons.css";
 @import "~material-design-lite/src/material-design-lite.scss";
 
+@import "./../assets/helper.scss";
 @import "./../assets/mdl-button.scss";
 @import "./../assets/mdl-card.scss";
 @import "./../assets/mdl-layout.scss";
 
 @import "./app/app.component.scss";
-
-body {
-  @extend .mdl-color--grey-900;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  hyphens: auto;
-}
