--- a/src/app/shared/components/navigation/navigation.component.html
+++ b/src/app/shared/components/navigation/navigation.component.html
@@ -3,7 +3,7 @@
         ${'main' === route
         ? `<h1 class="mdl-layout-title mdl-typography--text-center">
             <img src="dist/resources/icon.png" class="logo" />
-           Developpeur Web et Mobile
+            Developpeur Web et Mobile
         </h1>`
         : `<h1 class="mdl-layout-title mdl-typography--text-center">
             <button onclick="back()"
@@ -32,4 +32,8 @@
     <span class="mdl-layout__tab-panel is-active" id="main"></span>
     <span class="mdl-layout__tab-panel" id="courses"></span>
     <span class="mdl-layout__tab-panel" id="favorites"></span>
+</div>
+<div class="w-100 mdl-js-snackbar mdl-snackbar">
+    <div class="w-100 mdl-snackbar__text mdl-typography--text-center"></div>
+    <button class="mdl-snackbar__action" type="button"></button>
 </div>
