--- a/src/app/favorites/favorite-list/favorite-list.component.html
+++ b/src/app/favorites/favorite-list/favorite-list.component.html
@@ -1,6 +1,6 @@
 <div class="mdl-grid mdl-color--accent-contrast w-100 h-100 h-min-100 p-relative border-box">
     ${!favoriteList.length
-    ? `<div class="empty m-auto center mdl-cell mdl-cell--8-col">
+    ? `<div class="empty m-auto mdl-typography--text-center mdl-cell mdl-cell--8-col">
         <i class="material-icons">grade</i>
         <div class="mdl-typography--headline">
             Aucun favoris
