--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,44 +1,38 @@
-<header class="mdl-grid w-100 p-0 border-box mdl-color--${last ? last.color : 'accent-contrast'}">
+<header class="mdl-grid w-100 p-0 border-box mdl-shadow--2dp mdl-color--${last ? last.color : 'accent-contrast'}">
     ${this.last
     ? `<div class="h-100 w-100 m-0 mdl-cell mdl-card">
         <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
             <h2 class="display-1" onclick="show('${last.name}')">${last.name}</h2>
-            <p class="w-100 mdl-card__supporting-text mdl-typography--text-center mdl-color-text--grey-50">
-                ${last.description}
-            </p>
         </div>
         <div
-            class="mdl-card__actions mdl-color-text--grey-50  mdl-color--${last.color.substr(0, last.color.length - 3) + (parseInt(last.color.substr(last.color.length - 3), 10) + 100)}">
+            class="mdl-shadow--2dp mdl-card__actions mdl-color-text--grey-50  mdl-color--${last.color.substr(0, last.color.length - 3) + (parseInt(last.color.substr(last.color.length - 3), 10) + 100)}">
             <span class="material-icons">visibility</span>
             <div class="mdl-layout-spacer"></div>
             <span>${last.updated}</span>
         </div>
     </div>`
-    : `<div class="empty m-auto center mdl-cell mdl-cell--8-col">
+    : `<div class="empty m-auto mdl-typography--text-center mdl-cell mdl-cell--8-col">
         <i class="material-icons">visibility</i>
         <div class="mdl-typography--headline">
             Aucune lecture récente
         </div>
     </div>`}
 </header>
-<section class="courses border-box mdl-grid mdl-color--primary">
-    Hello
-</section>
-<footer class="d-flex mdl-mega-footer">
-    <div class="w-100 mr-0 ml-0 mdl-grid">
-        <div class="mdl-cell mdl-cell--3-col-phone mdl-cell--6-col-tablet mdl-cell--8-col mdl-color-text--grey-50">
-            <h4 class="mt-0 mdl-typography--headline">Cours en ligne</h4>
-            <p class="mdl-cell--hide-phone">
-                Retrouvez l'ensemble des cours et le code associé au format open source sur GitHub
-            </p>
-            <a href="https://github.com/seeren-training" target="_blank"
-                class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                GitHub
-            </a>
-        </div>
-        <div
-            class="logo mdl-cell mdl-cell--1-col-phone mdl-cell--2-col-tablet mdl-cell--4-col mdl-typography--text-center">
-            <img src="dist/resources/icon.png" alt="" />
+<section class="p-0 courses mdl-typography--text-center border-box mdl-grid mdl-color-text--accent-contrast">
+    <h3 class="mdl-cell mdl-cell--8-col mdl-typography--display-1 p-relative">
+        Suivez votre progression de Cours et sauvegardez vos passages favoris
+    </h3>
+    <div class="mdl-cell mdl-cell--8-col mdl-typography--text-center p-relative">
+        </br>
+        <button onclick="showAll()"
+            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+            Thématiques
+        </button>
+        <div class="mdl-cell mdl-cell--8-col mdl-typography--text-center">
+            <div class="particle particle-1"></div>
+            <div class="particle particle-2"></div>
+            <div class="particle particle-3"></div>
         </div>
     </div>
-</footer>
+    <div class="particle-mask w-100 h-100 p-absolute"></div>
+</section>
