--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -3,23 +3,72 @@ app-main {
         height: 30vh;
         align-content: center;
         flex-direction: column;
+        z-index: 9;
+        position: relative;
     }
     > .courses {
-        
+        position: relative;
+        align-content: center;
+        flex-direction: column;
+        justify-content: center;
         height: calc(70vh - 35px);
-    }
-    > footer {
-        align-items: center;
-        height: 50vh;
-        background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgb(66,66,66) 100%) !important;
-        .mdl-grid {
-            padding-top: 8px;
-            .logo {
-                justify-content: center;
-                img {
-                    max-height: 4em;
-                    align-self: center;
-                }
+        overflow: hidden;
+        h3 {
+            z-index: 9;
+            font-weight: 200;
+            hyphens: none;
+        }
+        .mdl-button {
+            z-index: 9;
+            overflow: visible;
+        }
+        $spacing: 1000;
+        @mixin particles($max) {
+            $box-shadow: 0px 0px #18FFFF;
+            @for $i from 1 through $max {
+                $box-shadow: #{$box-shadow},
+                    (random($spacing / 2) + random($spacing / 2) * -1) + px random($spacing) + px #006064;
+            }
+            box-shadow: $box-shadow;
+        }
+        @keyframes particles {
+            0% {
+                transform: translateY(0px);
+            }
+            75% {
+                opacity: 0.7;
+            }
+            100% {
+                transform: translateY($spacing * -1 + px);
+                opacity: 0;
+            }
+        }
+        .particle-mask {
+            background: linear-gradient(transparent 50%, #000000 95%);
+            position: absolute;
+            z-index: 8;
+        }
+        .particle {
+            position: relative;
+            margin: auto;
+            border-radius: 50%;
+            &.particle-1 {
+                animation: particles 15s linear infinite;
+                @include particles(100);
+                height: 2px;
+                width: 2px;
+            }
+            &.particle-2 {
+                animation: particles 20s linear infinite;
+                @include particles(75);
+                height: 4px;
+                width: 5px;
+            }
+            &.particle-3 {
+                animation: particles 25s linear infinite;
+                @include particles(20);
+                height: 6px;
+                width: 6px;
             }
         }
     }
