--- a/src/app/favorites/favorite-list/favorite-list.component.scss
+++ b/src/app/favorites/favorite-list/favorite-list.component.scss
@@ -9,6 +9,7 @@ app-favorite-list {
                 flex-shrink: 0;
                 flex-wrap: wrap;
                 margin: 0.5em 0;
+                border-radius: 0.3em;
                 .mdl-typography--subhead {
                     padding: 0.5em 1em;
                 }
