--- a/src/app/favorites/favorite-list/favorite-list.component.html
+++ b/src/app/favorites/favorite-list/favorite-list.component.html
@@ -1,18 +1,15 @@
-<div class="mdl-grid mdl-color--accent-contrast w-100 h-100 h-min-100 p-relative border-box">
+<div class="mdl-grid mdl-color--accent-contrast w-100 h-min-100 p-relative border-box">
     ${!favoriteList.length
     ? `<div class="empty m-auto mdl-typography--text-center mdl-cell mdl-cell--8-col">
         <i class="material-icons">grade</i>
         <div class="mdl-typography--headline">
-            Aucun favoris
+            Aucun extrait
         </div>
     </div>`
     : `<ul class="mdl-list p-0 m-0 mdl-cell mdl-cell--8-col">
         ${ favoriteList.map((favorite, index) =>
         `<li
             class="p-0 border-box mdl-shadow--2dp mdl-list__item mdl-color-text--accent-contrast mdl-color--${color(favorite.course).substr(0, color(favorite.course).length - 3) + (parseInt(color(favorite.course).substr(color(favorite.course).length - 3), 10) + 100)}">
-            <span class="w-100 mdl-typography--subhead mdl-color--${color(favorite.course)}">
-                ${favorite.course}
-            </span>
             <span class="border-box mdl-typography--headline">
                 ${favorite.chapter}: ${favorite.section}
             </span>
@@ -20,6 +17,9 @@
             <button onclick="show(${index})" class="mdl-button mdl-js-button mdl-button--icon">
                 <i class="material-icons toggle">keyboard_arrow_right</i>
             </button>
+            <span class="w-100 mdl-typography--subhead mdl-color--${color(favorite.course)}">
+                ${favorite.course}
+            </span>
         </li>`).join('')}
     </ul>`}
 </div>
