--- a/src/app/shared/components/navigation/navigation.component.html
+++ b/src/app/shared/components/navigation/navigation.component.html
@@ -3,7 +3,7 @@
         ${'main' === route
         ? `<h1 class="mdl-layout-title mdl-typography--text-center">
             <img src="dist/resources/icon.png" class="logo" />
-            Developpeur Web et Mobile
+            ${title}
         </h1>`
         : `<h1 class="mdl-layout-title mdl-typography--text-center">
             <button onclick="back()"
@@ -24,7 +24,7 @@
         <a ${'chapter' !==route ? `onclick="navigate('favorites')" href="#favorites" ` :
             `onclick="toogleFavorite(event)" href="#" `}
             class="mdl-layout__tab ${'favorites' === route ? 'is-active': ''}${'chapter' === route ? ' chapter' : ''}">
-            <span class="material-icons">grade</span>
+            <span class="lab-icons"></span>
         </a>
     </div>
 </header>
