--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -7,7 +7,10 @@ app-navigation {
             background-color: white !important;
             color: black !important;
             .mdl-button--mini-fab {
-                top: 0.05em;
+                $size: 26px;
+                width: $size !important;
+                min-width: $size !important;
+                height: $size !important;
             }
         }
         .mdl-layout__header-row {
@@ -19,19 +22,16 @@ app-navigation {
                 overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
-                .mdl-button--mini-fab {
-                    position: absolute;
-                    top: 0.05em;
-                    left: 0.5em;
-                }
+                .mdl-button--mini-fab,
                 .logo {
                     position: absolute;
-                    top: -0.125em;
+                    top: 0.1em;
                     left: 0.4em;
                     $size: 36px;
-                    width: $size !important;
-                    min-width: $size !important;
-                    height: $size !important;
+                    width: $size;
+                    min-width: $size;
+                    height: $size;
+                    border-radius: 50%;
                 }
             }
         }
@@ -49,6 +49,20 @@ app-navigation {
                     }
                     &.is-active.chapter::after {
                         background-color: transparent !important;
+                    }
+
+                    &.is-active {
+                        .lab-icons {
+                            opacity: 1;
+                        }
+                    }
+                    .lab-icons {
+                        display: inline-block;
+                        background-image: url("./../resources/icon-min.png");
+                        height: 20px;
+                        width: 20px;
+                        background-size: cover;
+                        opacity: 0.6;
                     }
                 }
             }
