--- a/src/app/shared/components/navigation/navigation.component.html
+++ b/src/app/shared/components/navigation/navigation.component.html
@@ -1,16 +1,16 @@
 <header class="mdl-layout__header mdl-layout__header--transparent">
     <div class="mdl-layout__header-row">
         ${'main' === route
-        ? `<h1 class="mdl-layout-title mdl-typography--text-center">
-            <img src="dist/resources/icon.png" class="logo" />
+        ? `<h1 class="w-100 border-box ellipsis overflow-h  mdl-layout-title mdl-typography--text-center">
+            <img src="dist/resources/icon-alpha.png" class="p-absolute logo" />
             ${title}
         </h1>`
-        : `<h1 class="mdl-layout-title mdl-typography--text-center">
+        : `<h1 class="w-100 border-box ellipsis overflow-h mdl-layout-title mdl-typography--text-center">
             <button onclick="back()"
-                class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored mdl-js-ripple-effect">
+                class="p-absolute mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored mdl-js-ripple-effect">
                 <i class="material-icons">arrow_back</i>
             </button>
-            ${title.charAt(0).toUpperCase() + title.slice(1)}
+            ${title}
         </h1>`}
     </div>
     <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-shadow--16dp mdl-color--accent">
