--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -20,7 +20,7 @@
 </header>
 <section class="p-0 courses mdl-typography--text-center border-box mdl-grid mdl-color-text--accent-contrast">
     <h3 class="mdl-cell mdl-cell--8-col mdl-typography--display-1 p-relative">
-        Progressez en Programmation et prélevez des extraits
+        Progressez en Programmation en prélevant vos extraits préférés
     </h3>
     <div class="mdl-cell mdl-cell--8-col mdl-typography--text-center p-relative">
         </br>
