--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,8 +1,8 @@
-${ courseList
+${ courseList.length
 ? `<header class="mdl-color--${courseList[0].color}">
     <div class="h-100 w-100 m-0 mdl-cell mdl-card">
         <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
-            <h2 class="display-1" onclick="show('${courseList[0].name}')">${courseList[0].name}</h2>
+            <h2 class="display-1" onclick="onCourse('${courseList[0].name}')">${courseList[0].name}</h2>
             <p class="w-100 mdl-card__supporting-text mdl-typography--text-center mdl-color-text--grey-50">
                 ${courseList[0].description}
             </p>
@@ -29,7 +29,7 @@ ${ courseList
 </section>
 <section class="mdl-grid mdl-color--accent-contrast">
     ${ courseList.map((course, key) => key
-    ? `<div onclick="show('${course.name}')"
+    ? `<div onclick="onCourse('${course.name}')"
         class="mdl-cell mdl-cell--6-col-phone mdl-cell--4-col-tablet mdl-cell--3-col mdl-card mdl-shadow--2dp mdl-color--${course.color}">
         <div class="mdl-card__title mdl-card--expand mdl-color-text--grey-50">
             <h3 class="mdl-card__title-text">${course.name}</h3>
